--- a/client/env.example
+++ b/client/env.example
@@ -1,6 +1,7 @@
 # API Configuration
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5002
 VITE_SOCKET_URL=http://localhost:5000
+VITE_ARTICLES_API_URL=http://localhost:5002/api/articles
 
 # App Configuration
 VITE_APP_NAME=ChatApp
