--- a/client/env.example
+++ b/client/env.example
@@ -1,11 +1,9 @@
-# API Configuration
-VITE_API_URL=http://localhost:5002
-VITE_SOCKET_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5002/api
+VITE_SOCKET_URL=http://localhost:5002
 VITE_ARTICLES_API_URL=http://localhost:5002/api/articles
-
-# App Configuration
 VITE_APP_NAME=ChatApp
 VITE_APP_VERSION=1.0.0
+
 
 # Feature Flags
 VITE_ENABLE_SOCKETS=true
