--- a/server/env.example
+++ b/server/env.example
@@ -1,34 +1,6 @@
-# Database Configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/chatapp_db"
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-
-# JWT Configuration
+PORT=5002
+DATABASE_URL="postgresql://postgres:Jules2020@localhost:5433/vop?schema=chatapp"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:5173
-
-# File Upload Configuration
-UPLOAD_PATH=./uploads
-MAX_FILE_SIZE=5242880
-
-# Socket.IO Configuration
-SOCKET_CORS_ORIGIN=http://localhost:5173
-
-# Email Configuration (for future use)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-
-# Redis Configuration (for session management - optional)
-REDIS_URL=redis://localhost:6379
-
-# Cloud Storage (for production - optional)
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret 
+CORS_ORIGIN=http://localhost:3000
+SOCKET_CORS_ORIGIN=http://localhost:3000
+API_URL=http://localhost:5002
