--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,17 @@ VITE_SOCKET_URL=http://localhost:5002
 VITE_ARTICLES_API_URL=http://localhost:5002/api/articles
 VITE_APP_NAME=ChatApp
 VITE_APP_VERSION=1.0.0
+
+
+# Feature Flags
+VITE_ENABLE_SOCKETS=true
+VITE_ENABLE_NOTIFICATIONS=true
+VITE_ENABLE_FILE_UPLOAD=true
+
+# External Services (for future use)
+VITE_GOOGLE_CLIENT_ID=your-google-client-id
+VITE_FACEBOOK_APP_ID=your-facebook-app-id
+
+# Analytics (for production - optional)
+VITE_GA_TRACKING_ID=your-ga-tracking-id
+VITE_SENTRY_DSN=your-sentry-dsn 
