--- a/client/env.example
+++ b/client/env.example
@@ -1,19 +1,31 @@
-VITE_API_URL=http://localhost:5002/api
-VITE_SOCKET_URL=http://localhost:5002
-VITE_ARTICLES_API_URL=http://localhost:5002/api/articles
-VITE_APP_NAME=ChatApp
-VITE_APP_VERSION=1.0.0
+# Chart App Client Environment Variables
 
+# API Configuration
+VITE_API_URL=http://localhost:5002/api
+
+# Socket Configuration
+VITE_SOCKET_URL=http://localhost:5002
+
+# PWA Configuration
+VITE_VAPID_PUBLIC_KEY=your_vapid_public_key_here
+
+# App Configuration
+VITE_APP_NAME=Chart App
+VITE_APP_VERSION=1.0.0
+VITE_APP_DESCRIPTION=A modern social media platform with chat, clubs, articles, and community features
 
 # Feature Flags
-VITE_ENABLE_SOCKETS=true
-VITE_ENABLE_NOTIFICATIONS=true
-VITE_ENABLE_FILE_UPLOAD=true
+VITE_ENABLE_PUSH_NOTIFICATIONS=true
+VITE_ENABLE_OFFLINE_MODE=true
+VITE_ENABLE_BACKGROUND_SYNC=true
 
-# External Services (for future use)
-VITE_GOOGLE_CLIENT_ID=your-google-client-id
-VITE_FACEBOOK_APP_ID=your-facebook-app-id
+# Analytics (optional)
+VITE_GOOGLE_ANALYTICS_ID=your_ga_id_here
 
-# Analytics (for production - optional)
-VITE_GA_TRACKING_ID=your-ga-tracking-id
-VITE_SENTRY_DSN=your-sentry-dsn 
+# Social Media
+VITE_TWITTER_HANDLE=@chartapp
+VITE_FACEBOOK_PAGE=https://facebook.com/chartapp
+
+# Support
+VITE_SUPPORT_EMAIL=support@chartapp.com
+VITE_SUPPORT_URL=https://chartapp.com/support 
