--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
-VITE_API_URL=http://localhost:5002/api
-VITE_SOCKET_URL=http://localhost:5002
-VITE_ARTICLES_API_URL=http://localhost:5002/api/articles
+VITE_API_URL=https://umuhuza.store/api
+VITE_SOCKET_URL=https://umuhuza.store
+VITE_ARTICLES_API_URL=https://umuhuza.store/api/articles
 VITE_APP_NAME=ChatApp
 VITE_APP_VERSION=1.0.0
 
