--- a/client/env.example
+++ b/client/env.example
@@ -1,10 +1,10 @@
 # Chart App Client Environment Variables
 
 # API Configuration
-VITE_API_URL=http://localhost:5002/api
+VITE_API_URL=https://umuhuza.store/api
 
 # Socket Configuration
-VITE_SOCKET_URL=http://localhost:5002
+VITE_SOCKET_URL=https://umuhuza.store
 
 # PWA Configuration
 VITE_VAPID_PUBLIC_KEY=your_vapid_public_key_here
