--- a/server/env.example
+++ b/server/env.example
@@ -1,6 +1,6 @@
 PORT=5002
 DATABASE_URL="postgresql://postgres:Jules2020@localhost:5433/vop?schema=chatapp"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-CORS_ORIGIN=http://localhost:3000
-SOCKET_CORS_ORIGIN=http://localhost:3000
-API_URL=http://localhost:5002
+CORS_ORIGIN=https://umunsi.vercel.app
+SOCKET_CORS_ORIGIN=https://umunsi.vercel.app
+API_URL=https://umuhuza.store
